--- a/src/app/pages/change-password/change-password.page.html
+++ b/src/app/pages/change-password/change-password.page.html
@@ -1,28 +1,28 @@
 <ion-header mode="ios">
   <ion-toolbar>
-    <ion-title class="dark-background">Change Password</ion-title>
+    <ion-title>Change Password</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content  mode="ios" class="dark-background-content">
+<ion-content mode="ios" [fullscreen]="true">
 
   <!-- Ion list that contains the inputs to change the password -->
   <ion-list lines="full" mode="ios" class="dark-background">
 
     <ion-card>
-      <ion-item  mode="ios" class="dark-background-content">
+      <ion-item>
         <ion-input mode="ios" [(ngModel)]="oldPassword" placeholder="Insert old password" type="password"></ion-input>
       </ion-item>
     </ion-card>
 
     <ion-card>
-      <ion-item mode="ios" class="dark-background-content">
+      <ion-item>
         <ion-input [(ngModel)]="newPassword" placeholder="Insert new password" type="password"></ion-input>
       </ion-item>
     </ion-card>
 
     <ion-card>
-      <ion-item mode="ios" class="dark-background-content">
+      <ion-item>
         <ion-input [(ngModel)]="newPasswordRepeated" placeholder="Repeat new password" type="password"></ion-input>
       </ion-item>
     </ion-card>
@@ -33,7 +33,7 @@
 
     <!-- the divs with the ngFor will be always one -->
     <div class="save-button" *ngFor="let user of users">
-      <ion-button  mode="ios" (click)="changePassword(user)">Change Password</ion-button>
+      <ion-button (click)="changePassword(user)">Change Password</ion-button>
     </div>
 
   </ion-list>
