--- a/src/app/pages/help/help.page.html
+++ b/src/app/pages/help/help.page.html
@@ -1,195 +1,195 @@
 <ion-header mode="ios">
   <ion-toolbar>
-    <ion-title class="dark-background">Help</ion-title>
+    <ion-title>Help</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" mode="ios" class="dark-background-content">
+<ion-content mode="ios" [fullscreen]="true">
 
-  <ion-card mode="ios">
+  <ion-card>
 
-    <ion-card-content mode="ios">
+    <ion-card-content>
 
       To show icons on your accounts you need to use keywords as:
     </ion-card-content>
   </ion-card>
 
-  <ion-list lines="full" mode="ios">
+  <ion-list lines="full"  class="dark-background">
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>AliPay</ion-label> <ion-icon slot="end" name="logo-alipay" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>AliPay</ion-label> <ion-icon class="icon" slot="end" name="logo-alipay"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Android</ion-label> <ion-icon slot="end" name="logo-android" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Android</ion-label> <ion-icon slot="end" name="logo-android"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Amazon</ion-label> <ion-icon slot="end" name="logo-amazon" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Amazon</ion-label> <ion-icon slot="end" name="logo-amazon"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Apple</ion-label> <ion-icon slot="end" name="logo-apple" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Apple</ion-label> <ion-icon slot="end" name="logo-apple"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>AppStore</ion-label> <ion-icon slot="end" name="logo-apple-appstore" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>AppStore</ion-label> <ion-icon slot="end" name="logo-apple-appstore"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>BitBucket</ion-label> <ion-icon slot="end" name="logo-bitbucket" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>BitBucket</ion-label> <ion-icon slot="end" name="logo-bitbucket"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>BitCoin</ion-label> <ion-icon slot="end" name="logo-bitcoin" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>BitCoin</ion-label> <ion-icon slot="end" name="logo-bitcoin"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Chrome</ion-label> <ion-icon slot="end" name="logo-chrome" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Chrome</ion-label> <ion-icon slot="end" name="logo-chrome"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Cloud</ion-label> <ion-icon slot="end" name="cloud" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Cloud</ion-label> <ion-icon slot="end" name="cloud"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>CodePen</ion-label> <ion-icon slot="end" name="logo-codepen" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>CodePen</ion-label> <ion-icon slot="end" name="logo-codepen"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Discord</ion-label> <ion-icon slot="end" name="logo-discord" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Discord</ion-label> <ion-icon slot="end" name="logo-discord"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Dropbox</ion-label> <ion-icon slot="end" name="logo-dropbox" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Dropbox</ion-label> <ion-icon slot="end" name="logo-dropbox"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Facebook</ion-label> <ion-icon slot="end" name="logo-facebook" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Facebook</ion-label> <ion-icon slot="end" name="logo-facebook"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Github</ion-label> <ion-icon slot="end" name="logo-github" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Github</ion-label> <ion-icon slot="end" name="logo-github"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>GitLab</ion-label> <ion-icon slot="end" name="logo-gitlab" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>GitLab</ion-label> <ion-icon slot="end" name="logo-gitlab"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Google</ion-label> <ion-icon slot="end" name="logo-google" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Google</ion-label> <ion-icon slot="end" name="logo-google"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Instagram</ion-label> <ion-icon slot="end" name="logo-instagram" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Instagram</ion-label> <ion-icon slot="end" name="logo-instagram"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Ionic</ion-label> <ion-icon slot="end" name="logo-ionic" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Ionic</ion-label> <ion-icon slot="end" name="logo-ionic"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Linkedin</ion-label> <ion-icon slot="end" name="logo-linkedin" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Linkedin</ion-label> <ion-icon slot="end" name="logo-linkedin"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Mail</ion-label> <ion-icon slot="end" name="mail" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Mail</ion-label> <ion-icon slot="end" name="mail"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Microsoft</ion-label> <ion-icon slot="end" name="logo-microsoft" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Microsoft</ion-label> <ion-icon slot="end" name="logo-microsoft"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Outlook</ion-label> <ion-icon slot="end" name="mail" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Outlook</ion-label> <ion-icon slot="end" name="mail"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>PayPal</ion-label> <ion-icon slot="end" name="logo-paypal" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>PayPal</ion-label> <ion-icon slot="end" name="logo-paypal"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Pinterest</ion-label> <ion-icon slot="end" name="logo-pinterest" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Pinterest</ion-label> <ion-icon slot="end" name="logo-pinterest"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>PlayStation</ion-label> <ion-icon slot="end" name="logo-playstation" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>PlayStation</ion-label> <ion-icon slot="end" name="logo-playstation"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Play Store</ion-label> <ion-icon slot="end" name="logo-google-playstore" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Play Store</ion-label> <ion-icon slot="end" name="logo-google-playstore"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Reddit</ion-label> <ion-icon slot="end" name="logo-reddit" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Reddit</ion-label> <ion-icon slot="end" name="logo-reddit"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Slack</ion-label> <ion-icon slot="end" name="logo-slack" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Slack</ion-label> <ion-icon slot="end" name="logo-slack"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Skype</ion-label> <ion-icon slot="end" name="logo-skype" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Skype</ion-label> <ion-icon slot="end" name="logo-skype"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Stackoverflow</ion-label> <ion-icon slot="end" name="logo-stackoverflow" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Stackoverflow</ion-label> <ion-icon slot="end" name="logo-stackoverflow"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Steam</ion-label> <ion-icon slot="end" name="logo-steam" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Steam</ion-label> <ion-icon slot="end" name="logo-steam"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>SoundCloud</ion-label> <ion-icon slot="end" name="logo-soundcloud" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>SoundCloud</ion-label> <ion-icon slot="end" name="logo-soundcloud"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Snapchat</ion-label> <ion-icon slot="end" name="logo-snapchat" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Snapchat</ion-label> <ion-icon slot="end" name="logo-snapchat"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>TikTok</ion-label> <ion-icon slot="end" name="logo-tiktok" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>TikTok</ion-label> <ion-icon slot="end" name="logo-tiktok"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Tumblr</ion-label> <ion-icon slot="end" name="logo-tumblr" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Tumblr</ion-label> <ion-icon slot="end" name="logo-tumblr"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Twitch</ion-label> <ion-icon slot="end" name="logo-twitch" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Twitch</ion-label> <ion-icon slot="end" name="logo-twitch"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Twitter</ion-label> <ion-icon slot="end" name="logo-twitter" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Twitter</ion-label> <ion-icon slot="end" name="logo-twitter"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Vimeo</ion-label> <ion-icon slot="end" name="logo-vimeo" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Vimeo</ion-label> <ion-icon slot="end" name="logo-vimeo"></ion-icon>
     </ion-item>
   
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Vk</ion-label> <ion-icon slot="end" name="logo-vk" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Vk</ion-label> <ion-icon slot="end" name="logo-vk"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>WeChat</ion-label> <ion-icon slot="end" name="logo-wechat" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>WeChat</ion-label> <ion-icon slot="end" name="logo-wechat"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>WhatsApp</ion-label> <ion-icon slot="end" name="logo-whatsapp" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>WhatsApp</ion-label> <ion-icon slot="end" name="logo-whatsapp"></ion-icon>
     </ion-item>
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Windows</ion-label> <ion-icon slot="end" name="logo-windows" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Windows</ion-label> <ion-icon slot="end" name="logo-windows"></ion-icon>
     </ion-item> 
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Xbox</ion-label> <ion-icon slot="end" name="logo-xbox" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Xbox</ion-label> <ion-icon slot="end" name="logo-xbox"></ion-icon>
     </ion-item> 
 
-    <ion-item mode="ios" class="dark-background-content">
-      <ion-label>Youtube</ion-label> <ion-icon slot="end" name="logo-youtube" color="dark"></ion-icon>
+    <ion-item>
+      <ion-label>Youtube</ion-label> <ion-icon slot="end" name="logo-youtube"></ion-icon>
     </ion-item> 
   </ion-list>
 </ion-content>
