--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,14 +1,14 @@
 <ion-header mode="ios">
   <ion-toolbar>
-    <ion-title class="dark-background">Settings</ion-title>
+    <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content mode="ios" class="dark-background-content" [fullscreen]="true">
+<ion-content mode="ios" [fullscreen]="true">
 
-  <ion-list mode="ios" lines="full" class="dark-background">
+  <ion-list lines="full"  class="dark-background">
 
-    <ion-item class="dark-background-content" [routerLink]="['/tabs/tabs/change-password']">
+    <ion-item [routerLink]="['/tabs/tabs/change-password']">
       <ion-label>Change Password</ion-label>
     </ion-item>
   </ion-list>
