--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,24 +1,24 @@
 <ion-tabs mode="ios" class="dark-background">
 
-  <ion-tab-bar class="dark-background" mode="ios" slot="accounts">
-    <ion-tab-button class="dark-background" mode="ios" tab="accounts">
-      <ion-icon mode="ios" name="list-circle-outline"></ion-icon>
-      <ion-label mode="ios">Accounts</ion-label>
+  <ion-tab-bar class="dark-background" slot="accounts">
+    <ion-tab-button class="dark-background" tab="accounts">
+      <ion-icon name="list-circle-outline"></ion-icon>
+      <ion-label>Accounts</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button class="dark-background" mode="ios" tab="new">
-      <ion-icon mode="ios"name="add-circle-outline"></ion-icon>
-      <ion-label mode="ios">New</ion-label>
+    <ion-tab-button class="dark-background" tab="new">
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>New</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button class="dark-background" mode="ios"tab="settings">
-      <ion-icon mode="ios"name="cog-outline"></ion-icon>
-      <ion-label mode="ios">Settings</ion-label>
+    <ion-tab-button class="dark-background" tab="settings">
+      <ion-icon name="cog-outline"></ion-icon>
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button class="dark-background" mode="ios" tab="help">
-      <ion-icon mode="ios"name="help-circle-outline"></ion-icon>
-      <ion-label mode="ios">Help</ion-label>
+    <ion-tab-button class="dark-background" tab="help">
+      <ion-icon name="help-circle-outline"></ion-icon>
+      <ion-label>Help</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
