--- a/src/app/pages/change-password/change-password.page.html
+++ b/src/app/pages/change-password/change-password.page.html
@@ -7,11 +7,11 @@
 <ion-content mode="ios" [fullscreen]="true">
 
   <!-- Ion list that contains the inputs to change the password -->
-  <ion-list lines="full" mode="ios" class="dark-background">
+  <ion-list lines="full" class="dark-background">
 
     <ion-card>
       <ion-item>
-        <ion-input mode="ios" [(ngModel)]="oldPassword" placeholder="Insert old password" type="password"></ion-input>
+        <ion-input [(ngModel)]="oldPassword" placeholder="Insert old password" type="password"></ion-input>
       </ion-item>
     </ion-card>
 
