--- a/src/app/pages/new/new.page.html
+++ b/src/app/pages/new/new.page.html
@@ -9,7 +9,7 @@
   <ion-list lines="full" class="dark-background">
 
     <ion-card>
-      <ion-item mode="ios">
+      <ion-item>
         
         <ion-input [(ngModel)]="newAccount.accountName" placeholder="Account name" clear-input="true"></ion-input>
 
